Fix on service name line break issue on iOS arabic RTL mode

--- a/src/app/ticket-info/ticket/ticket.component.css
+++ b/src/app/ticket-info/ticket/ticket.component.css
@@ -80,6 +80,10 @@
   margin-right: auto;
 }
 
+.tckt-line-height {
+  line-height: 25px;
+}
+
 .expand-view {
   position: absolute;
 
